[project]
name = "eslam-nerfstudio"
description = "ESLAM implementation in nerfstudio framework."
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["eslam*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
eslam = 'eslam.eslam_config:eslam'
